# android-cli

./: Cargo.toml
src/: ascii.rs  commands.rs  lib.rs  main.rs
src/models/: Cli.rs  cli.rs  command.rs
src/plugins/: clipboard.rs  hello.rs  help.rs  ip.rs  mod.rs  pwd.rs  set.rs  shell.rs  sysinfo.rs  walkdir.rs
