[package]
name = "android-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
colored = "2.0.0"
ipconfig = "0.3.1"
sysinfo = "0.28.4"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3.3"
